<resources>
    <!-- Login -->
    <string name="app_name">SeguridadServicios</string>
    <string name="LBL_LOGIN">Usuario</string>
    <string name="LBL_CONTRASENA">Contraseña</string>
    <string name="LBL_BTN_INGRESA">Ingresar</string>


    <!-- Home -->
    <string name="LBL_AB_AYUDA">Ayuda</string>
    <string name="LBL_AB_SALIR">Salir</string>
    <string name="LBL_BT_PUERTAS">Puertas</string>
    <string name="LBL_BT_PERMISOS">Permisos</string>
    <string name="LBL_BT_BPANICO">Botón de Pánico</string>
    <string name="LBL_BT_GENCLA">Generar Clave</string>
    <string name="TITULO_HOME">SEGURIDAD Y SERVICIOS</string>


    <string name="title_activity_home">HomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Puertas -->
    <string name="LBL_AB_PUERTAS">Puertas</string>
    <string name="LBL_AB_PERMISOS">Permisos</string>
    <string name="LBL_BT_PPPAL">Puerta Principal</string>
    <string name="LBL_BT_PHAB">Puerta Habitación1</string>
    <string name="LBL_BT_PHABD">Puerta Habitación2</string>
    <string name="LBL_DOOR_STATUS">ESTADO PUERTA</string>
    <string name="LBL_BT_USERSACCESS">Usuarios con Acceso</string>

    <string name="title_activity_puertas">Puertas</string>
    <string name="title_activity_front_door">FrontDoorActivity</string>
    <string name="title_activity_history_door_access">HistoryDoorAccessActivity</string>
    <string name="title_activity_request_registration">RequestRegistrationActivity</string>
    <string name="title_activity_permissions">PermissionsActivity</string>
    <string name="title_activity_registred_user">RegistredUser</string>

    <!--historial-->

    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Nobiembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="dias">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="title_activity_personal_data">PersonalData</string>
    <string name="title_activity_guest">Guest</string>
    <string name="title_activity_pesonal_data">PesonalDataActivity</string>
    <string name="title_activity_key_generate">keyGenerate</string>
    <string name="title_activity_service_test">ServiceTest</string>
    <string name="title_activity_mis_puertas">MisPuertasActivity</string>

</resources>
