    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/witheLetter">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="120dp"
            android:gravity="center">

            <Button
                android:id="@+id/id_pppal"
                android:background="@layout/buttonshape"
                android:shadowRadius="5"
                android:layout_width="193dp"
                android:text="@string/LBL_BT_PPPAL"
                android:layout_height="36dp"
                android:layout_marginLeft="90sp"
                android:onClick="principal"
                android:layout_marginRight="90sp"
                android:layout_marginTop="5sp"
                android:textColor="@color/witheLetter"
                android:gravity="center" />

            <Button
                android:id="@+id/id_phab"
                android:background="@layout/buttonshape"
                android:shadowRadius="5"
                android:layout_width="193dp"
                android:text="@string/LBL_BT_PHAB"
                android:onClick="habitacion1"
                android:layout_height="36dp"
                android:layout_marginLeft="90sp"
                android:layout_marginRight="90sp"
                android:layout_marginTop="50dp"
                android:textColor="@color/witheLetter"
                android:gravity="center" />

            <Button
                android:id="@+id/id_phabd"
                android:background="@layout/buttonshape"
                android:shadowRadius="5"
                android:layout_width="193dp"
                android:text="@string/LBL_BT_PHABD"
                android:onClick="habitacion2"
                android:layout_height="36dp"
                android:layout_marginLeft="90sp"
                android:layout_marginRight="90sp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="60dp"
                android:textColor="@color/witheLetter"
                android:gravity="center" />

        </LinearLayout>

        <include layout="@layout/menu_inferior"></include>
    </LinearLayout>


