<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/witheLetter"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <include layout="@layout/menu_inferior"

            android:id="@+id/include"
            android:layout_gravity="bottom"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"></include>
    </LinearLayout>

    <Button
        android:id="@+id/id_puertas"
        android:background="@layout/buttonshape"
        android:shadowRadius="5"
        android:text="@string/LBL_BT_PUERTAS"

        android:onClick="Irpuertas"
        android:textColor="@color/witheLetter"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/id_permisos"
        android:background="@layout/buttonshape"
        android:shadowRadius="5"
        android:text="@string/LBL_BT_PERMISOS"
        android:onClick="permisos"
        android:textColor="@color/witheLetter"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/id_puertas"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/id_bpanico"
        android:background="@layout/buttonshape"
        android:shadowRadius="5"
        android:onClick="panico"

        android:text="@string/LBL_BT_BPANICO"
        android:textColor="@color/witheLetter"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/id_permisos"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignLeft="@+id/id_permisos"
        android:layout_alignStart="@+id/id_permisos" />

    <TextView

        android:id="@+id/imprimeclave"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/id_bgenerarclave"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/id_bgenerarclave"
        android:background="@layout/buttonshape"
        android:shadowRadius="5"
        android:onClick="generarclave"
        android:text="@string/LBL_BT_GENCLA"
        android:textColor="@color/witheLetter"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/id_bpanico"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignLeft="@+id/id_bpanico"
        android:layout_alignStart="@+id/id_bpanico" />

</RelativeLayout>

